// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert should match snapshot 1`] = `
{
  "code": "nor5",
  "flowUnit": "m3/s",
  "levelUnit": "cm",
  "location": {
    "coordinates": [
      11.1,
      12.2,
      1.1,
    ],
    "kind": "gauge",
  },
  "name": "norway gauge 5",
  "requestParams": {
    "foo": "bar",
  },
  "source": {
    "name": "Norway",
    "termsOfUse": null,
  },
  "status": null,
  "timezone": "Africa/Lagos",
  "url": "http://nve.no/nor5",
}
`;

exports[`update should match snapshot 1`] = `
{
  "code": "gal1",
  "flowUnit": "cm3/s",
  "levelUnit": "m",
  "location": {
    "coordinates": [
      11.1,
      12.2,
      1.1,
    ],
    "kind": "gauge",
  },
  "name": "GALICIA GAUGE 1",
  "requestParams": {
    "lol": "fun",
  },
  "source": {
    "name": "Galicia",
    "termsOfUse": "Terms of use for Galicia",
  },
  "status": null,
  "timezone": "Africa/Lagos",
  "url": "http://galic.ia/gal1",
}
`;
